# Drift

./: LICENSE  README.md  pyproject.toml
drift/: __init__.py  core.py  models.py
drift/callbacks/: __init__.py  langchain.py
drift/detectors/: __init__.py  latency.py  output_drift.py  sequence.py
examples/: demo.py  quickstart_langchain.py
tests/: test_detectors.py
