[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftguard"
version = "0.1.0"
description = "Statistical anomaly detection for AI agent workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Dominic", email = "" },
]
keywords = ["ai", "agents", "anomaly-detection", "observability", "langchain", "llm", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
all = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/dombinic/Drift"
Repository = "https://github.com/dombinic/Drift"
Issues = "https://github.com/dombinic/Drift/issues"

[tool.hatch.build.targets.wheel]
packages = ["drift"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
